<resources>
    <string name="app_name">FoodOrderingApp</string>
    <string name="cd_item_restaurant_img">image for the restaurant</string>
    <string name="cd_item_option_navigation">icon of navigation drawer option</string>
    <string name="restaurant_name">restaurant_name</string>
    <string name="ins_enter_your_email_text">Enter your email address</string>
    <string name="Email_txt">Email</string>
    <string name="next_step_txt">Next step</string>

    <string name="google_maps_key">AIzaSyB4pb-Wg81dSaTY19J-wPyhvGPWkelrVNs</string>
    <string name="web_client_id">399098422279-202vvi9qcrpl62khdvr3iesfagnppbqt.apps.googleusercontent.com</string>
    <string name="or_txt">OR</string>
    <string name="min_txt">Min. Order</string>
    <string name="delivery_fee_txt">Delivery fee</string>
    <string name="start_bracket">(</string>
    <string name="end_bracket">)</string>

    <string name="egypt" translatable="false">EGP </string>
    <string name="basic_price">Basic Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="info_icon">info</string>
    <string name="rating">Rating</string>
    <string name="title_here">title here</string>
    <string name="backdrop_cd">backdropimage</string>
    <string name="img_minus_cd">image minus</string>
    <string name="img_add_cd">image add</string>
    <string name="cd_img_res">image restaurant</string>
    <string name="cd_arrow_img">arrow image icon</string>
    <string name="cd_img_meal">image meal</string>
    <string name="cd_image_arrow_right">image arrow right</string>
    <string name="sign_in_with_google_btn">sign in with google</string>
    <string name="account_detail_fragment_text">account detail fragment</string>
    <string name="email_here">email here</string>
    <string name="meal_name">meal name</string>
    <string name="meal_description_text">this is description</string>
    <string name="price_text">Price</string>
    <string name="one_number">1</string>
    <string name="text_money">EGP 20</string>
    <string name="rate_number">(25)</string>
    <string name="category_name">category text</string>
    <string name="date_text">22/12/2015</string>
    <string name="reviewer_name">name</string>
    <string name="review">review</string>
    <string name="review_rate">4.3</string>
</resources>
