<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:background="#fff"
    android:id="@+id/relative_item_meal"
    android:padding="16dp">


    <ImageView
        android:id="@+id/img_meal"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/cd_img_meal" />

    <TextView
        android:id="@+id/name_meal"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/img_meal"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/img_meal"
        android:fontFamily="@font/abeezee_regular"
        android:gravity="top"
        android:padding="0dp"
        android:text="@string/meal_name"
        android:textSize="20sp"
        android:paddingEnd="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_meal"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_meal"
        android:fontFamily="@font/abeezee_regular"
        android:layout_alignParentBottom="true"

        android:text="@string/text_money"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="end|center_vertical">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:foregroundGravity="center"
            android:src="@mipmap/right_arrow_fore"
            android:contentDescription="@string/cd_image_arrow_right" />

    </LinearLayout>
</RelativeLayout>