<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/myFacebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login_btn" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:layout_below="@id/myFacebookButton"
        android:id="@+id/ins_enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ins_enter_your_email_text"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_txt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ins_enter_your_email">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_txt" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/chk_email_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email_txt_input"
        android:text="@string/next_step_txt" />


    <TextView
        android:id="@+id/response"
        android:layout_below="@id/chk_email_btn"
        android:gravity="center"

        android:text = "email here"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>