<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back_drop_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:layout_collapseMode="parallax" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/name_meal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee_regular"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="meal name"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee_regular"
                android:text="this is description"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/basic_price_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:fontFamily="@font/abeezee_regular"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/basic_price"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/basic_price_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="end"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="Price"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#efefef" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee_regular"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/quantity"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/quantity_background"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <ImageButton
                    android:id="@+id/imgMinus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:src="@drawable/minus_circular_button" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="center"
                    android:numeric="integer"
                    android:text="1"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/img_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:src="@drawable/add_circular_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="start"
                    android:text="@string/total"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/abeezee_regular"
                    android:gravity="end"
                    android:text="EGP 20"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/add_to_basket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_to_basket_btn_background"
                android:text="@string/add_to_basket"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>


